--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "service-downloader",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "Download a file and decompress it. Designed for use with Sql Operations Studio",
   "main": "out/main.js",
   "typings": "out/main",
@@ -25,6 +25,7 @@
     "http-proxy-agent": "^2.1.0",
     "https-proxy-agent": "^2.2.1",
     "mkdirp": "^0.5.1",
+    "promise-retry": "^1.1.1",
     "tmp": "^0.0.33"
   },
   "repository": {
