--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "service-downloader",
-  "version": "0.1.7",
+  "version": "0.1.6",
   "description": "Download a file and decompress it. Designed for use with Sql Operations Studio",
   "main": "out/main.js",
   "typings": "out/main",
@@ -13,6 +13,7 @@
   "author": "anthonydresser",
   "license": "ISC",
   "devDependencies": {
+    "@types/async-retry": "^1.4.1",
     "@types/node": "^9.4.6",
     "@types/tmp": "^0.0.33",
     "tslint": "^5.16.0",
@@ -20,12 +21,12 @@
     "typescript": "^2.7.2"
   },
   "dependencies": {
+    "async-retry": "^1.2.3",
     "decompress": "^4.2.0",
     "eventemitter2": "^5.0.1",
     "http-proxy-agent": "^2.1.0",
     "https-proxy-agent": "^2.2.1",
     "mkdirp": "^0.5.1",
-    "promise-retry": "^1.1.1",
     "tmp": "^0.0.33"
   },
   "repository": {
